--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "url": "https://github.com/urielabin/artillery-test/issues"
   },
   "devDependencies": {
-    "artillery": "^1.6.0-29"
+    "artillery": "^1.6.0-29",
+    "artillery-plugin-expect": "^1.2.1"
+  },
+  "dependencies": {
+    "artillery-plugin-publish-metrics": "^1.1.0"
   }
 }
